# speexdsp

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  ChangeLog  Doxyfile  Makefile.am  README  README.Trimedia  README.blackfin  README.symbian  README.win32  Speex.kdevelop  Speex.spec  Speex.spec.in  TODO  acinclude.m4  appveyor.yml  autogen.sh  config.h.cmake  configure.ac  configure.in  meson.build  meson_options.txt  speex.m4  speex.pc.in  speexdsp.pc.in
cmake/: config.h.in  speexdsp.pc.in  speexdspConfig.cmake.in  speexdsp_config_types.h.in
doc/: Makefile.am  draft-herlein-speex-rtp-profile-00.txt  draft-herlein-speex-rtp-profile-01.txt  internals.lyx  manual.lyx  meson.build  programming.html  rtp.txt  sampledec.c  sampleenc.c
html/: index.html  patents.html  speex.xcf
include/: Makefile.am  speex.h  speex_bits.h  speex_callbacks.h  speex_header.h  speex_stereo.h
include/speex/: Makefile.am  meson.build  speex.h  speex_bits.h  speex_buffer.h  speex_echo.h  speex_header.h  speex_jitter.h  speex_noglobals.h  speex_preprocess.h  speex_resampler.h  speex_stereo.h  speex_types.h  speex_types.h.in  speexdsp_config_types.h  speexdsp_types.h
libspeex/: Makefile.am  _kiss_fft_guts.h  arch.h  bits.c  bits.h  buffer.c  cb_search.c  cb_search.h  cb_search_arm4.h  cb_search_bfin.h  cb_search_sse.h  curves.c  denoise.c  denoise.h  echo_diagnostic.m  exc_10_16_table.c  exc_10_32_table.c  exc_20_32_table.c  exc_5_256_table.c  exc_5_64_table.c  exc_8_128_table.c  exc_8_256_table.c  exc_gains_table.c  exc_gains_wb2_table.c  exc_gains_wb_table.c  exc_sb_table.c  exc_table.c  exc_wb_table.c  fftwrap.c  filterbank.c  filterbank.h  filters.c  filters.h  filters_arm4.h  filters_bfin.h  filters_sse.h  fixed_arm.h  fixed_arm4.h  fixed_arm5e.h  fixed_bfin.h  (+93 more)
libspeexdsp/: Makefile.am  arch.h  bench_echo.c  buffer.c  checkasm.h  fixed_debug.h  fixed_generic.h  jitter.c  kiss_fft.c  kiss_fft_rvv.h  kiss_fft_rvv_asm.S  mdf.c  mdf_rvv.h  mdf_rvv_asm.S  meson.build  os_support.h  preprocess.c  resample.c  resample.h  resample_neon.h  resample_rvv.h  resample_rvv_asm.S  resample_sse.h  scal.c  smallft.c  smallft_rvv.h  smallft_rvv_asm.S  speex_resampler_fileio.cc  speexdsp.def  testdenoise.c  testecho.c  testjitter.c  testresample.c  testresample2.c
macosx/: Info.plist
macosx/Speex.xcodeproj/: project.pbxproj
speexclient/: compile.sh  speex_jitter_buffer.c  speex_jitter_buffer.h  speexclient.c
src/: Makefile.am  getopt.c  getopt1.c  skeleton.h  speexdec.1  speexdec.c  speexenc.1  speexenc.c  wav_io.c  wav_io.h  wave_out.c  wave_out.h
subprojects/: checkasm.wrap
subprojects/packagefiles/: checkasm-rvv-llvm-imm.patch  checkasm-rvv-musl-hwprobe.patch
symbian/: config.h  speex.mmp  speex_types.h
tests/: meson.build
tests/checkasm/: checkasm.c  cpu.c  internal.h  resample.c  resample_c_wrap.c  resample_neon_wrap.c  test_routine.c
tests/checkasm/fft/: fft_bfly.c  fft_transform.c  wrap.h  wrap_fft_c.c  wrap_fft_impl.h  wrap_fft_rename.h  wrap_fft_rvv.c
tests/checkasm/mdf/: mdf_kernels.c  wrap.h  wrap_mdf_c.c  wrap_mdf_impl.h  wrap_mdf_rename.h  wrap_mdf_rvv.c
tests/checkasm/resample/: STATUS.md  inner_product_double.c  inner_product_single.c  interpolate_product_double.c  interpolate_product_single.c  resample.c  resample_kernels.c  resample_process.c  resampler_basic_direct_double.c  resampler_basic_direct_single.c  resampler_basic_interpolate_double.c  resampler_basic_interpolate_single.c  wrap.h  wrap_c.c  wrap_neon.c  wrap_resample_c.c  wrap_resample_impl.h  wrap_resample_neon.c  wrap_resample_rename.h  wrap_resample_rvv.c  wrap_resample_sse.c  wrap_resample_sse2.c  wrap_sse.c  wrap_sse2.c
tests/checkasm/smallft/: smallft_drft.c  wrap.h  wrap_smallft_c.c  wrap_smallft_impl.h  wrap_smallft_rename.h  wrap_smallft_rvv.c
ti/: Makefile.am  os_support_custom.h  testenc-TI-C5x.c  testenc-TI-C64x.c
ti/speex_C54_test/: speex_C54_test.pjt
ti/speex_C55_test/: speex_C55_test.pjt
ti/speex_C64_test/: speex_C64_test.pjt
tmv/: _kiss_fft_guts_tm.h  config.h  fftwrap_tm.h  filterbank_tm.h  fixed_tm.h  kiss_fft_tm.h  kiss_fftr_tm.h  mdf_tm.h  misc_tm.h  preprocess_tm.h  profile_tm.h
win32/: Makefile.am  config.h  libspeexdsp.def  speex.iss  speex_types.h
win32/VS2003/: Makefile.am  libspeex.sln  libspeexdsp.sln
win32/VS2003/libspeex/: libspeex.vcproj
win32/VS2003/libspeexdsp/: libspeexdsp.vcproj
win32/VS2003/speexdec/: speexdec.vcproj
win32/VS2003/speexenc/: speexenc.vcproj
win32/VS2005/: libspeexdsp.sln
win32/VS2005/libspeex/: libspeex.vcproj
win32/VS2005/libspeexdsp/: libspeexdsp.vcproj
win32/VS2005/speexdec/: speexdec.vcproj
win32/VS2005/speexenc/: speexenc.vcproj
win32/VS2008/: libspeexdsp.sln
win32/VS2008/libspeex/: libspeex.vcproj
win32/VS2008/libspeexdsp/: libspeexdsp.vcproj
win32/VS2008/tests/: testdenoise.vcproj  testecho.vcproj  testresample.vcproj
win32/VS2015/: Makefile.am  UpgradeLog.htm  libspeexdsp.VC.db  libspeexdsp.sln
win32/VS2015/libspeexdsp/: libspeexdsp.vcxproj  libspeexdsp.vcxproj.filters
win32/VS2015/tests/: Makefile.am  testdenoise.vcxproj  testdenoise.vcxproj.filters  testecho.vcxproj  testecho.vcxproj.filters  testresample.vcxproj  testresample.vcxproj.filters
win32/libspeex/: Makefile.am  libspeex.dsp  libspeex.dsw  libspeex_dynamic.dsp  speex.def
win32/libspeexdsp/: libspeexdsp.dsw
win32/speexdec/: speexdec.dsp
win32/speexenc/: speexenc.dsp  speexenc.dsw
win32/testfile/: micin.pcm  micin.pk  out.pcm  out.pk  speaker.pcm  speaker.pk
